2002-07-26  Gary Thomas  <gary@chez-thomas.org>
2002-07-26  Ken Cox <jkc@redhat.com>

	* src/net/eth_drv.c (eth_drv_start): Force multicast address
	setup any time chip is reset/reconfigured.

2002-05-30  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/eth_drivers.cdl: Provide CYGINT_IO_ETH_INT_SUPPORT_REQUIRED
	interface to indicate if interrupt support is required.

2002-05-28  Jonathan Larmour  <jlarmour@redhat.com>

	* src/lwip/lw.diff: Remove. Obsolete.

2002-05-13  Jesper Skov  <jskov@redhat.com>

	* cdl/eth_drivers.cdl: Moved the package's header files to
	cyg/io/eth to clean up the include root directory.

2002-04-30  Jonathan Larmour  <jlarmour@redhat.com>

	* src/lwip/eth_drv.c: Update from Jani Monoses.

	* cdl/eth_drivers.cdl: Move CYGINT_ISO_STRING_STRFUNCS requirement
	into CYGPKG_IO_ETH_DRIVERS_NET where it belongs.
	Move CYGINT_ISO_STRING_MEMFUNCS requirement into
	CYGPKG_IO_ETH_DRIVERS_STAND_ALONE where it belongs.

2002-04-10   Gary Thomas <gthomas@redhat.com>

	* src/net/eth_drv.c: Only pass mutlicast addresses down to drivers.	

2002-04-05   Jani Monoses  <jani@iv.ro>

	* src/lwip/eth_drv.c: New file. Add eth driver support for lwip.
	* src/lwip/lw.diff: New file. diff against lwip sources.
	* src/lwip/README: New file.
	* cdl/eth_drivers.cdl: Add lwip driver support.

2002-03-09  Gary Thomas  <gthomas@redhat.com>

	* src/net/eth_drv.c: Select 'multicast_all' if too many addresses
	are required.  Also, ignore any non-multicast addresses.

2002-02-22  Hugo Tyson  <hmt@redhat.com>

	* doc/ethdrv.sgml: New file.  SGML-ized the existing driver-doc
	file and brought the information up to date with deliver functions
	and all that.

2002-02-18  Gary Thomas  <gthomas@redhat.com>

	* cdl/eth_drivers.cdl: 
	Add new interface CYGINT_IO_ETH_MULTICAST which is used to
	insure that drivers support multicast addresses if IPv6 is used.

2002-02-15  Gary Thomas  <gthomas@redhat.com>

	* src/net/eth_drv.c: 